cmake_minimum_required(VERSION 3.14)

project(TransactionsLibs)

add_library(${TARGET_HASH_TABLE_LIB} STATIC ${LIB_HASH_TABLE_SOURCE})
set_target_properties(${TARGET_HASH_TABLE_LIB} PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set_target_properties(${TARGET_HASH_TABLE_LIB} PROPERTIES PREFIX "")
target_include_directories(${TARGET_HASH_TABLE_LIB} PUBLIC ${RELATIVE_HEADER_DIR})

add_library(${TARGET_SBBST_LIB} STATIC ${LIB_SBBST_SOURCE})
set_target_properties(${TARGET_SBBST_LIB} PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set_target_properties(${TARGET_SBBST_LIB} PROPERTIES PREFIX "")
target_include_directories(${TARGET_SBBST_LIB} PUBLIC ${RELATIVE_HEADER_DIR})

add_library(${TARGET_BPLUSTREE_LIB} STATIC ${LIB_BPLUSTREE_SOURCE})
set_target_properties(${TARGET_BPLUSTREE_LIB} PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set_target_properties(${TARGET_BPLUSTREE_LIB} PROPERTIES PREFIX "")
target_include_directories(${TARGET_BPLUSTREE_LIB} PUBLIC ${RELATIVE_HEADER_DIR})

add_executable(bptree ${LIB_BPLUSTREE_SOURCE} )
# target_link_libraries(bptree ${TARGET_GRAPH_LIB} ${TARGET_SBBST_LIB})
target_include_directories(bptree PUBLIC ${RELATIVE_HEADER_DIR})
